@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-05
+2008-12-02 Andy Salnikov
+- changed logic in MsgFormatter so that envvar format strings have
+  priority over the application-global strings
+
 Tag: V00-00-04
 2008-12-02 Andy Salnikov
 - new 'fatal' level added, causes immediate termination (via abort())
